// 定义项目 API 的 proto 文件 可以同时描述 gRPC 和 HTTP API
// protobuf 文件参考:
//  - https://developers.google.com/protocol-buffers/
syntax = "proto3";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

// package 命名使用 {appid}.{version} 的方式, version 形如 v1, v2 ..
package demo.service.v1;

// NOTE: 最后请删除这些无用的注释 (゜-゜)つロ

option go_package = "api";
option (gogoproto.goproto_enum_prefix_all) = false;
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;

service Demo {
  rpc Ping(.google.protobuf.Empty) returns (.google.protobuf.Empty);
  rpc SayHello(HelloReq) returns (.google.protobuf.Empty);
  rpc SayHelloURL(HelloReq) returns (HelloResp) {
    option (google.api.http) = {
      get: "/kratos-demo/say_hello"
    };
  };
}

service FileSystem {
  rpc Ping(.google.protobuf.Empty) returns (.google.protobuf.Empty);
  rpc MediaIDGet(MediaIDReq)returns(MediaIDResp);
  rpc NewsURLGet(NewsURLGetReq)returns(NewsURLGetResp);

}
service TBK{
  rpc Ping(.google.protobuf.Empty) returns (.google.protobuf.Empty);
  rpc KeyConvert(KeyConvertReq) returns(KeyConvertResp);
  rpc WithDraw(WithDrawReq)returns(WithDrawResp);
}
service Wechat{
  rpc MatchedTemplateMsgSend(MatchedTemplateMsgSendReq) returns(.google.protobuf.Empty);
  rpc BalanceTemplateMsgSend(BalanceTemplateMsgSendReq) returns(.google.protobuf.Empty);
}
message KeyConvertReq{
  string FromKey = 1 ;
  string UserID = 2 ;
}
message KeyConvertResp{
  string ItemURL =1;
  string Price=2;
  string Rebate =3;
  string Coupon=4;
  string Title=5;
  string PicURL=6;

}
message MediaIDReq{
  string  fakeID = 1;
  int64 timestamp = 2;
}

message MediaIDResp{
  string MediaID = 1;
}

message HelloReq {
  string name = 1 [(gogoproto.moretags) = 'form:"name" validate:"required"'];
}

message HelloResp {
  string Content = 1 [(gogoproto.jsontag) = 'content'];
}
message NewsURLGetReq{
  string  fakeID=1;
  int64 timestamp =2;
}
message NewsURLGetResp{
  string URL =1;
}

message MatchedTemplateMsgSendReq{
  string userID = 1;
  string orderID =2;
  string title =3;
  string paidTime =4;
  string alipayTotalPrice=5;
  string rebate = 6;
}

message BalanceTemplateMsgSendReq{
  string userID = 1;
  string orderID =2;
  string title =3;
  string earningTime =4;
  string salary=5;
  string balance = 6;
}


message WithDrawReq{
  string userID = 1;
}
message WithDrawResp{
  string Rebate =1;
  repeated string OrderIDs =2;
}
